<resources>
    <string name="app_name">Cyo Green</string>
    <string name="facebook_app_id">597482130870968</string>
    <string name="name_of_the_customer">Name Of the Customer</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email ID</string>
    <string name="auto_geo_location_puller">Auto Geo Location Puller</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="cart">Cart</string>
    <string name="total_payable">Total Payable</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="checkout">CHECKOUT</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="language">Language</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="your_cart_list">Your Cart List</string>
    <string name="my_order_page">My Order Page</string>
    <string name="support">Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="my_order">My Order</string>
    <string name="no_of_items">No. Of Items :</string>
    <string name="no_record_found">No Record Found</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New User??</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="already_registered">Already registered ??</string>
    <string name="lang_change_uzbek">Language Changed to Uzbek Successfully</string>
    <string name="lang_change_eng">Language Changed to English Successfully</string>
    <string name="lang_change_russia">Language Changed to Pynnke Successfully</string>
    <string name="invalid_email">Invalid Email ID or Password</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="add">ADD</string>
    <string name="search_for_products">Search for Products</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="call_center">Call-center</string>
    <string name="pincode">Enter pincode</string>
</resources>
