<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@color/darkGray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:weightSum="4"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/home_LL"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="50sp"
                android:layout_height="30sp"
                android:padding="5sp"
                android:src="@drawable/logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="12sp"
                android:fontFamily="sans-serif-condensed"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/category_LL"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:padding="5sp"
                android:src="@drawable/category"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="12sp"
                android:fontFamily="sans-serif-condensed"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:id="@+id/search_LL"
            android:gravity="center">
            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:padding="5sp"
                android:src="@drawable/search"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textSize="12sp"
                android:fontFamily="sans-serif-condensed"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:id="@+id/cartLL"
            android:gravity="center">
            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:padding="5sp"
                android:src="@drawable/cart"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart"
                android:textSize="12sp"
                android:fontFamily="sans-serif-condensed"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>