<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_margin="10sp"
        android:src="@drawable/logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:id="@+id/loginLL"
        android:visibility="gone"
        android:background="@color/darkGray"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="Login"
            android:layout_margin="10sp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/white"
            android:padding="5sp"
            android:background="@drawable/et_rect_white"/>
<!--        <TextView-->
<!--            android:layout_width="0sp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Sign Up"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_margin="5sp"-->
<!--            android:gravity="center"-->
<!--            android:textSize="15sp"-->
<!--            android:fontFamily="sans-serif-condensed"-->
<!--            android:textColor="@color/white"-->
<!--            android:padding="5sp"-->
<!--            android:background="@drawable/et_rect_white"/>-->
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/home"
                android:layout_margin="10sp">
                <ImageView
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:layout_marginLeft="20sp"
                    app:srcCompat="@drawable/logo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/home"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/grey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/profileLL"
                android:layout_margin="10sp">
                <ImageView
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:padding="5sp"
                    android:layout_marginLeft="20sp"
                    app:srcCompat="@drawable/account_black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/profile"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/grey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/cart_list"
                android:layout_margin="10sp">
                <ImageView
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:layout_marginLeft="20sp"
                    android:padding="5sp"
                    app:srcCompat="@drawable/cart"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/your_cart_list"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:layout_marginLeft="20sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/grey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/order_page"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="10sp">
                <ImageView
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:padding="5sp"
                    android:layout_marginLeft="20sp"
                    app:srcCompat="@drawable/order"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/my_order_page"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_marginLeft="20sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/grey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/support"
                android:visibility="gone"
                android:layout_margin="10sp">
                <ImageView
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:padding="5sp"
                    android:layout_marginLeft="20sp"
                    app:srcCompat="@drawable/support"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/support"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_marginLeft="20sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/grey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/langLL"
                android:visibility="gone"
                android:layout_margin="10sp">
                <ImageView
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:padding="5sp"
                    android:layout_marginLeft="20sp"
                    app:srcCompat="@drawable/language_change"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_marginLeft="20sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:visibility="gone"
                android:background="@color/grey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/contact_us"
                android:layout_margin="10sp">
                <ImageView
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:padding="5sp"
                    android:layout_marginLeft="20sp"
                    app:srcCompat="@drawable/phone"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/call_center"
                    android:layout_marginLeft="20sp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/grey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/privacy_policy"
                android:layout_margin="10sp">
                <ImageView
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:padding="5sp"
                    android:layout_marginLeft="20sp"
                    app:srcCompat="@drawable/privacy"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_marginLeft="20sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/grey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/contact_usLL"
                android:layout_margin="10sp">
                <ImageView
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:padding="5sp"
                    android:layout_marginLeft="20sp"
                    app:srcCompat="@drawable/about_us"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_marginLeft="20sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/grey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/about_us"
                android:layout_margin="10sp">
                <ImageView
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:padding="5sp"
                    android:layout_marginLeft="20sp"
                    app:srcCompat="@drawable/about_us"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_marginLeft="20sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/grey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/logoutLL"
                android:layout_margin="10sp">
                <ImageView
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:padding="5sp"
                    android:layout_marginLeft="20sp"
                    app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_marginLeft="20sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/grey"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>