<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".authentication.SignUpActivity">

    <RelativeLayout
        android:id="@+id/mainImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/_15sdp"
            android:src="@drawable/logo" />
        <ImageView
            android:id="@+id/language"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:layout_margin="10sp"
            android:src="@drawable/language_change" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/mainImg"
        android:layout_above="@+id/bottomRel"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:background="@android:color/transparent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/et_rel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="10sp"
                android:background="@drawable/et_rect_background_border_new"
                android:padding="8sp">

                <ImageView
                    android:id="@+id/profile_pink"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:padding="@dimen/_3sdp"
                    app:srcCompat="@drawable/profile_adverj" />

                <EditText
                    android:id="@+id/etname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10sp"
                    android:layout_toRightOf="@+id/profile_pink"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/name_of_the_customer"
                    android:inputType="textPersonName"
                    android:textSize="12sp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="10sp"
                android:background="@drawable/et_rect_background_border_new"
                android:padding="8sp">

                <ImageView
                    android:id="@+id/mobile"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:padding="@dimen/_3sdp"
                    app:srcCompat="@drawable/mobile_number_adverj" />

                <EditText
                    android:id="@+id/mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10sp"
                    android:layout_toRightOf="@+id/mobile"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:textSize="12sp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="10sp"
                android:background="@drawable/et_rect_background_border_new"
                android:padding="8sp">

                <ImageView
                    android:id="@+id/email_img"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:padding="@dimen/_3sdp"
                    app:srcCompat="@drawable/profile_adverj" />

                <EditText
                    android:id="@+id/et_emailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10sp"
                    android:layout_toRightOf="@+id/email_img"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:textSize="12sp"/>
            </RelativeLayout>
            <RelativeLayout
            android:id="@+id/otp_rel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="10sp"
            android:background="@drawable/et_rect_background_border_new"
            android:padding="8sp">

            <ImageView
                android:id="@+id/pass_Pink"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:padding="@dimen/_3sdp"
                app:srcCompat="@drawable/location_adverj" />

            <EditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10sp"
                android:layout_toRightOf="@+id/pass_Pink"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/auto_geo_location_puller"
                android:inputType="textMultiLine"
                android:textSize="12sp" />
        </RelativeLayout>
            <RelativeLayout
                android:id="@+id/otp_rel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="10sp"
                android:background="@drawable/et_rect_background_border_new"
                android:padding="8sp">

                <ImageView
                    android:id="@+id/pincode_pink"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:padding="@dimen/_3sdp"
                    app:srcCompat="@drawable/location_adverj" />

                <EditText
                    android:id="@+id/et_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10sp"
                    android:layout_toRightOf="@+id/pincode_pink"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/pincode"
                    android:inputType="textMultiLine"
                    android:textSize="12sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="10sp"
                android:background="@drawable/et_rect_background_border_new"
                android:padding="8sp">

                <ImageView
                    android:id="@+id/passcode"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:padding="@dimen/_3sdp"
                    app:srcCompat="@drawable/otp_adverj" />

                <EditText
                    android:id="@+id/et_passcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10sp"
                    android:layout_toRightOf="@+id/passcode"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="Enter Password"
                    android:inputType="numberPassword"
                    android:textSize="12sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="10sp"
                android:background="@drawable/et_rect_background_border_new"
                android:padding="8sp">

                <ImageView
                    android:id="@+id/re_enter_passcode"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/otp_adverj" />

                <EditText
                    android:id="@+id/et_re_enter_passcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10sp"
                    android:layout_toRightOf="@+id/re_enter_passcode"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/re_enter_password"
                    android:inputType="numberPassword"
                    android:textSize="12sp"/>
            </RelativeLayout>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="20sp"
                android:background="@drawable/et_button"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/already_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="sans-serif-condensed"
                android:padding="10sp"
                android:text="@string/already_registered"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
